--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,349 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* CSS FOR DRAG */
+  .category-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
+  
+  .amount-nav{
+    padding-right: 4px;
+   }
+  .custom-select-size {
+    width: 150px; /* Adjust width as needed */
+    font-size: 0.875rem; /* Decrease font size if necessary */
+    padding: 0.375rem 0.75rem; /* Adjust padding to make the select box smaller */
+  }
+  
+  .input-group {
+    position: relative;
+    width: 400px;
+    min-width: 369px;
+    height: 59px;
+    transition: background-color 0.5s ease; /* add transition effect */
+  }
+  
+  .input-group:hover {
+    background-color: #79cb7b; /* change background color on hover */
+    box-shadow: 0 0 10px rgba(39, 45, 48, 0.2); /* add box shadow on hover */
+    cursor: pointer; /* change cursor to pointer on hover */
+  }
+ 
+   .mb-0{
+    margin-bottom: 0;
+   }
+   .overflow-new{
+    display: inline;
+    height:calc(100vh - 150px);
+    overflow: auto;
+    width:100%;
+   }
+   .overflow-new::-webkit-scrollbar {
+    width: 2px; /* Width of the scrollbar */
+  }
+  .overflow-new::-webkit-scrollbar-thumb {
+    background-color: rgba(93, 92, 92, 0.1); /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Roundness of the scrollbar thumb */
+    width: 2px; 
+  }
+  
+  .overflow-new::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.2); /* Color of the scrollbar thumb on hover */
+  }
+  
+  .overflow-scroll {
+    overflow-x: auto;
+    white-space: nowrap;
+    flex-grow: 1;
+    overflow-y: hidden; /* Hide overflow */
+    padding-bottom: 10px; 
+    height:calc(100vh - 200px);
+  }
+  .card-subtitle {
+    word-wrap: break-word;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .col-md-6.col-lg-3.mb-4 {
+    display: inline-block;
+    vertical-align: top;
+    width: 28%; /* adjust the width to fit your needs */
+  }
+
+/* App.css */
+.centered-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: #f2f2f2;
+
+}
+.text-muted-data-date{
+  color: #999;
+  font-size: 14px;
+  margin-bottom: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.custom-card {
+  min-width: 600px; /* Double the original min-width */
+  max-width: 100px; /* Adjusted to fit larger screens */
+  width: 100%;
+  background-color: #497282;
+}
+
+.custom-card-content {
+  padding: 16px;
+}
+
+.custom-typography {
+  margin-bottom: 16px;
+}
+.sticky-header {
+  position:sticky;
+  top: 0;
+  background-color: #dbd3d3;
+  z-index: 1;
+  transition: background-color 0.3s, box-shadow 0.3s;  
+}
+.sticky-header:hover {
+  background-color: #e2e6ea; /* Slightly darker shade for hover */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a shadow effect */
+}
+.container {
+  /* padding-top: 20px; */
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.row {
+  width: 100%; /* make the row take up the full width of the container */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.col-md-3,
+.col-lg-3 {
+  flex: 1 1  0%; /* make the columns take up the remaining space */
+}
+
+.card {
+  width: 100%; /* make the cards take up the full width of the columns */
+
+}
+
+.card-st-1{
+  margin:5px auto;
+  width:100%;
+  border:1px solid #ddd;
+  border-radius: 4px;
+}
+.card-header {
+  padding: 0.5rem 1.25rem; /* reduce the padding to make the header fit better */
+  border-bottom: 1px solid #dee2e6; /* add a border to the header */
+  background-color: #f8f9fa;
+}
+.italic-smaller {
+  font-style: italic;
+  font-size: smaller;
+}
+.card-title{
+  background-color: #2296ef;
+  height: 3rem; /* Example fixed height */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding: 0.75rem; /* Example padding */
+  margin-bottom: 0.5rem; /* Example margin */
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.italic-smaller-count {
+  font-style: normal;
+  font-size: 20px;
+  background: #f4f2f5;
+  border-radius: 30px;
+  padding: 5px 10px; /* add some padding to make it look like a badge */
+  display: inline-block; /* make it an inline-block element */
+  color: #2296ef; /* add white text color to contrast with the background */
+}
+.category {
+  flex: 1;
+  text-align: left;
+  padding-left:5px; /* Add padding to avoid text collision */
+}
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.card-body {
+  padding: 0.5rem 0.5rem; /* reduce the padding to make the body fit better */
+  /* overflow-y: auto; */
+  margin-right: 1px;
+  transition: background-color 0.3s ease; /* add transition effect */
+}
+
+.card-body:hover {
+  background-color: #f7f7f7; /* change background color on hover */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* add box shadow on hover */
+  cursor: pointer; /* change cursor to pointer on hover */
+}
+
+.card-body-data {
+  padding: 0.5rem 0.5rem;
+  transition: background-color 0.3s ease; /* add transition effect */
+}
+
+.card-body-data:hover {
+  background-color: #f7f7f7; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  cursor: pointer; 
+}
+.view-h {
+  height: calc(100vh - 200px);
+  overflow-y: auto;
+  padding: 5px; 
+  overflow-x: hidden; 
+}
+.view-h::-webkit-scrollbar {
+  height: 5px; 
+  width: 5px;
+}
+
+.view-h::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.view-h::-webkit-scrollbar-thumb {
+  background: #fdfdfd; 
+}
+
+.text-muted-data{
+  color: #000000 
+}
+
+.overflow-scroll {
+  flex-grow: 1;
+  overflow-y: hidden;
+  padding-bottom: 10px;
+} 
+.name {
+  flex: 1;
+  min-width: 150px; 
+  padding-top:5px; 
+  padding-left: 5px;
+}
+.value {
+  padding-right: 5px;
+  min-width: 50px; 
+  padding-top: 5px; 
+}
+
+.row.flex-nowrap {
+  flex-wrap: wrap;
+  overflow-x: auto;
+  /* padding-bottom: 20px;  */
+}
+
+
+.list-unstyled-item {
+  flex: 0 0 25%; 
+  max-width: 25.3%;  
+  margin-bottom: 20px; 
+}
+
+/* Make the card header sticky */
+.sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: #fff; /* set a background color to cover the previous card */
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+/* Style the card body */
+.card-body.view-h {
+  padding: 20px;
+  overflow-y: auto; /* make the card body scrollable if there's too much content */
+  transition: background-color 0.3s ease; /* add transition effect */
+}
+
+.card-body.view-h:hover {
+  background-color: #f2f2f2; /* change background color on hover */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* add box shadow on hover */
+  cursor: pointer; /* change cursor to pointer on hover */
+}
+
+/* Style the deal cards */
+.deal.card {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease, transform 0.3s ease; /* add transition effect */
+}
+
+.deal.card:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); /* increase box shadow on hover */
+  transform: translateY(-5px); /* add a slight lift on hover */
+  cursor: pointer!important; /* change cursor to pointer on hover */
+}
+
+/* Make the "Show more" link blue and small */
+.deal.card span:first-child {
+  color: blue;
+  font-size: small;
+  padding-left: 5px;
+  cursor: pointer;
+}
+
+/* Make the date text small and muted */
+.deal.card span:last-child {
+  font-size: small;
+  color: #999;
+  padding-right: 15px;
+}
+ul.row.flex-nowrap.list-unstyled {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+  list-style: none;
+}
+.height-fixed-top{
+  height: 100%;
+}
+.mt-4-top{
+  padding-top: 0rem;
+}
+@media (max-width: 576px) {
+  ul.row.flex-nowrap.list-unstyled {
+    overflow:auto;
   }
-  to {
-    transform: rotate(360deg);
+  .list-unstyled li{
+    width:100%;
+    max-width:100%;
   }
 }
