--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* .input-group{
+  position: absolute;
+  width: 300%;
+  max-width: 400px;
+  height: 70px;
+}
+.form-select{
+  width: 100%;
+  max-width: 250px;
+
+  } */
