--- a/src/Dragdropdata.css
+++ b/src/Dragdropdata.css
@@ -40,7 +40,7 @@ padding: 5px;
 
 .amount-nav {
   font-weight: bold;
-  font-size: 11px;
+  font-size: 13px;
   color: #000000;
 }
 
@@ -435,7 +435,7 @@ padding: 5px;
 .deal.card span:last-child {
   font-size: 12px;
   color: #999;
-  padding-right: 10px;
+  /* padding-right: 10px; */
 }
 
 ul.row.flex-nowrap.list-unstyled {
