--- a/src/Dragdropdata.css
+++ b/src/Dragdropdata.css
@@ -488,3 +488,22 @@ button.right_btn {
     float: right;
     right: 0;
 }
+
+.btn-fieldvalue {
+  background-color: transparent;
+  color: rgb(16, 97, 205);
+  border: 1px solid rgb(16, 97, 205);
+  font-size: 13px;
+  white-space: nowrap;     
+  overflow: hidden;         
+  text-overflow: ellipsis; 
+  max-width: 150px;        
+  padding: 5px 10px;      
+  cursor: pointer;         
+}
+
+
+.btn-fieldvalue.active {
+  background-color: #1061cd;
+  color: #fff;
+}
